# PredictionOfDiseases

./: .flake8  .gitignore  README.md  pyproject.toml
tests/: test_main.py
