[tool.poetry]
name = "Prediction_Diseases"
version = "0.0.1"
description = "This is the case for Prediction of the Spread Trend of Highly Contagious Diseases"
authors = ["kexin <gitkexin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
numpy = "^1.18.1"
pathlib = "^1.0.1"
Typing = "^3.7.4"
scikit-learn = "^0.22.2"
keras = "^2.3.1"
statsmodels = "^0.11.1"
pydot = "^1.4.1"

# optional dependencies meant for tox
tox = {version= "^3.12", optional=true}
tox-venv = {version= "^0.4.0", optional=true}

# optional dependencies meant for testing
pytest = {version= "^5.3.5", optional=true}
pytest-cov = {version= "^2.8.1", optional=true}
pytest-env = {version= "^0.6.2", optional=true}
#black = {version= "^19.10b0", optional=true}  # something wrong for it I will fix that soon
#flake8 = {version= "^3.7.9", optional=true}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pre-commit = "^2.2.0"
matplotlib = "^3.2.0"
seaborn = "^0.10.0"
folium = "^0.10.1"
gpxpy = "^1.4.0"

[tool.poetry.extras]
tox = ["tox", 'tox-venv']
testing = ["pytest", "pytest-cov", "pytest-env"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
